--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -226,7 +226,6 @@
 </div><!-- CLOSES #ARTICLE CONTAINER -->
 
 
-
 <footer class="col-12 d-none d-xl-block">
   <ul class="col-4">
     <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
@@ -234,11 +233,14 @@
     </ul>
 
 
-    <ul class="footer-nav col-6 offset-2">
+    <ul class="footer-nav offset-2">
+
+
+      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+      <li><a href="promotions.html">PROMOTIONS</a></li>
+      <li><a href="careers.html">CAREERS</a></li>
       <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
       <li><a href="accessibility.html">ACCESSIBILITY</a></li>
-      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
-      <li><a href="careers.html">CAREERS</a></li>
       </ul>
 
   </footer>
@@ -251,10 +253,12 @@
 
 
             <ul class="col-10 offset-1">
+              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
+              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
               <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
               <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
-              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
-              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+
               </ul>
 
               <ul class="social-media-list col-4 offset-4">
