--- a/promotions.html
+++ b/promotions.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
+    <title>Burns Scalo Real Estate</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -17,14 +18,6 @@
 <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-
-    <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="js/animate.js"></script>
-
-
-
-
-    <title>Burns Scalo Real Estate</title>
   </head>
   <body>
 
@@ -44,11 +37,10 @@
 
 
 
-
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
 
-          <li class="nav-item-1 d-none d-xl-block" id="active"><a href="who-we-are.html">WHO WE ARE</a>
+          <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
             <li><a href="team.html">TEAM</a></li>
             <li class="sub-2"><a href="press.html">PRESS</a></li>
@@ -97,31 +89,71 @@
           </nav>
 
 
-<div class="col-12" id="article">
 
+            <div class="col-12 p-0" id="portfolio">
 
-                        <div class="col-12">
-                        <h1 class="d-none col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3" id="article-title">PRIVACY POLICY</h1>
-                      </div>
-
-
-
-                      <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
-
-<h6 class="col-12">
-                        BURNS & SCALO REAL ESTATE SERVICES, EMAIL DISCLAIMER
-                      </h6>
-
-<p class="col-12">
-The information contained in or attached to this email is intended only for the use of the addressee. If you are not the intended recipient of this email, you are strictly prohibited from disclosing, copying, distributing, or retaining this email or any part of it. It may contain information which is confidential and/or covered by legal, professional or other privilege under applicable law. If you have received this email in error, please notify us immediately by return email, and delete and destroy all copies of this email. The views expressed in this email are not necessarily the views of Burns Scalo or its officers, directors, partners, members or managers, and they make no representation, nor accept any liability regarding its accuracy or completeness. Nothing contained in this email is intended to constitute an electronic signature, unless a specific statement to the contrary is included in this message
-</p>
-
-                      </article>
+              <div class="container-mixitup col-12 p-0">
 
 
 
-</div><!-- CLOSES #ARTICLE CONTAINER -->
+              <ul class="filters col-12 col-lg-8 offset-lg-1 float-left float-left">
+                      <li><a href="#" class="filter" data-filter="all">ALL</a></li>
+                      <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
 
+                    </ul>
+
+
+
+            <ul class="containMix portfolio-container col-12 col-md-10 offset-md-1 float-left" id="press">
+
+              <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+                <div class="portfolio-list col-12 float-left">
+                  <a href="promotion-development-referral.html">
+                    <div class="col-12 p-0 portfolio-image-container">
+                <img src="assets/images//promotions/development-referral/foster-zero-5.png" alt="#">
+                </div>
+              <h3>Development Referrals</h3>
+              <p>Make money through referrals.</p>
+              </a>
+              </div>
+            </li>
+
+
+            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+              <div class="portfolio-list col-12 float-left">
+                <a href="insights-article-0.html">
+                  <div class="col-12 p-0 portfolio-image-container">
+              <img src="assets/images//promotions/development-referral/foster-zero-5.png" alt="#">
+              </div>
+            <h3>Broker Referrals</h3>
+            <p>Make money through referrals.</p>
+            </a>
+            </div>
+          </li>
+
+
+
+            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+              <div class="portfolio-list col-12 float-left">
+                <a href="insights-article-1.html">
+                  <div class="col-12 p-0 portfolio-image-container">
+              <img src="assets/images/insights/article-1/office-cover.png" alt="#">
+              </div>
+            <h3>BSREstart</h3>
+            <p>Reopen. Responsibly.</p>
+            </a>
+            </div>
+          </li>
+
+
+
+
+
+
+        </ul>
+
+      </div>
+</div><!-- CLOSES MIXITUP CONTAINER -->
 
 
 <footer class="col-12 d-none d-xl-block">
@@ -168,88 +200,34 @@ The information contained in or attached to this email is intended only for the 
         </section>
 
 
+                    <script src="js/jquery.2.min.js"></script>
+                    <script src="js/jquery.mixitup.min.js"></script>
+                    <script>
+
+                        $('.containMix').mixItUp();
+                    </script>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <!-- DROPDOWN MENU SCRIPT
-          <script>
+                    <script>
                     function myFunction() {
-            var x = document.getElementById("nav");
-            if (x.style.display === "block") {
-              x.style.display = "none";
-            } else {
-              x.style.display = "block";
-            }
-          }
-          </script>
-          -->
+                       var element = document.getElementById("nav");
+                       element.classList.toggle("display-toggle");
+                    }
+                    </script>
 
 
+                    <script>
+                    function subNav() {
+                       var element = document.getElementById("subNavMobile");
+                       element.classList.toggle("display-toggle-subnav");
+                    }
+                    </script>
 
-
-
-          <script>
-          function myFunction() {
-             var element = document.getElementById("nav");
-             element.classList.toggle("display-toggle");
-          }
-          </script>
-
-
-          <script>
-          function subNav() {
-             var element = document.getElementById("subNavMobile");
-             element.classList.toggle("display-toggle-subnav");
-          }
-          </script>
-
-          <script>
-          function subNav1() {
-             var element = document.getElementById("subNavMobile1");
-             element.classList.toggle("display-toggle-subnav1");
-          }
-          </script>
-          <!--
-
-          <script>
-          function subNav() {
-            var x = document.getElementById("subNavMobile");
-            if (x.style.display === "none") {
-              x.style.display = "block";
-            } else {
-              x.style.display = "none";
-            }
-          }
-          </script>
-          -->
-
-          <!-- END DROPDOWN MENU SCRIPT -->
-
-              <!-- Optional JavaScript; choose one of the two! -->
-
-              <!-- Option 1: Bootstrap Bundle with Popper -->
-              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-              <!-- Option 2: Separate Popper and Bootstrap JS -->
-              <!--
-              <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-              -->
-            </body>
+                    <script>
+                    function subNav1() {
+                       var element = document.getElementById("subNavMobile1");
+                       element.classList.toggle("display-toggle-subnav1");
+                    }
+                    </script>
+</body>
           </html>
