--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -220,11 +220,14 @@ Tenants enjoy outdoor meeting areas, natural walking trails with fitness station
             </ul>
 
 
-            <ul class="footer-nav col-6 offset-2">
+            <ul class="footer-nav offset-2">
+
+
+              <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li><a href="promotions.html">PROMOTIONS</a></li>
+              <li><a href="careers.html">CAREERS</a></li>
               <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
               <li><a href="accessibility.html">ACCESSIBILITY</a></li>
-              <li><a href="tenant-perks.html">TENANT PERKS</a></li>
-              <li><a href="careers.html">CAREERS</a></li>
               </ul>
 
           </footer>
@@ -237,10 +240,12 @@ Tenants enjoy outdoor meeting areas, natural walking trails with fitness station
 
 
                     <ul class="col-10 offset-1">
+                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+                      <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
+                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
                       <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
                       <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
-                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
-                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+
                       </ul>
 
                       <ul class="social-media-list col-4 offset-4">
