--- a/promotion-development-referral.html
+++ b/promotion-development-referral.html
@@ -101,7 +101,7 @@
 
 
 
-    <div class="col-12 col-xl-8 image-container">
+    <div class="col-12 col-lg-8 image-container">
       <img src="assets/images/promotions/development-referral/foster-zero-5.png" class="col-12" alt="...">
     </div>
 
@@ -165,11 +165,12 @@ Are you a broker with a client in need of an interior buildout? You can earn $5,
 
 
                     <ul class="col-10 offset-1">
+                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
                       <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
+                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
                       <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
                       <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
-                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
-                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+
                       </ul>
 
                       <ul class="social-media-list col-4 offset-4">
