--- a/test.html
+++ b/test.html
@@ -151,21 +151,48 @@ Enriching experiences that keep people’s minds fresh and sharp, providing them
 
         </div><!-- CLOSES SCROLL CONTAINER -->
 
-        <footer class="col-12">
-          <ul class="col-2">
-            <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-            <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+        <footer class="col-12 d-none d-xl-block">
+          <ul class="col-4">
+            <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+            <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
             </ul>
 
 
-            <ul class="col-10">
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">NEWS</a></li>
-              <li><a href="#">CAREERS</a></li>
-              <li><a href="#">TENANT PERKS</a></li>
+            <ul class="footer-nav offset-2">
+
+
+              <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li><a href="promotions.html">PROMOTIONS</a></li>
+              <li><a href="careers.html">CAREERS</a></li>
+              <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+              <li><a href="accessibility.html">ACCESSIBILITY</a></li>
               </ul>
 
           </footer>
+
+
+
+        <section class="col-12 d-xl-none">
+                <footer class="mobile-footer col-12">
+
+
+
+                    <ul class="col-10 offset-1">
+                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+                      <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
+                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+                      <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+                      <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+
+                      </ul>
+
+                      <ul class="social-media-list col-4 offset-4">
+                        <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                        <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
+                        </ul>
+
+                  </footer>
+                </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
