--- a/what-we-do.html
+++ b/what-we-do.html
@@ -230,11 +230,14 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
     </ul>
 
 
-    <ul class="footer-nav col-6 offset-2">
+    <ul class="footer-nav offset-2">
+
+
+      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
+      <li><a href="promotions.html">PROMOTIONS</a></li>
+      <li><a href="careers.html">CAREERS</a></li>
       <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
       <li><a href="accessibility.html">ACCESSIBILITY</a></li>
-      <li><a href="tenant-perks.html">TENANT PERKS</a></li>
-      <li><a href="careers.html">CAREERS</a></li>
       </ul>
 
   </footer>
@@ -247,10 +250,12 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
 
 
             <ul class="col-10 offset-1">
+              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
+              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
               <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
               <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
-              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
-              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+
               </ul>
 
               <ul class="social-media-list col-4 offset-4">
