--- a/promotion-development-referral.html
+++ b/promotion-development-referral.html
@@ -113,29 +113,21 @@
 
 
 <div class="promotion-content-container col-12 col-lg-4">
+<div class="col-10 offset-1">
+  <h1>
 
-  <h1 class="col-10 offset-1">
-
-    <span class="d-none d-lg-block">
-    EARN
-<br>
-    MORE
+    <span class="d-block d-md-none d-lg-block">
+    EARN<br>MORE
     <br>
     <span class="turquoise-underline">MONEY</span></span>
 
 
-    <span class="d-lg-none">
-    EARN MORE
-    <span class="turquoise-underline">MONEY</span></span></h1>
+    <span class="turquoise-underline d-none d-md-block d-lg-none">
+    EARN MORE MONEY</span></h1>
+  </div>
     <h3 class="col-10 offset-1">Bring Us In On Your Next Interior Buildout</h3>
 
 
-<p class="col-10 offset-1">
-
-  Did you know that Burns Scalo Real Estate does its tenant buildouts? You can bring us in on your client’s next interior buildout bid and earn between $5,000 – $100,000 per referral when we sign the contract – with absolutely no limit on contracts.* It’s easy money.
-
-
-</p>
 </div>
 
 
