--- a/promotions.html
+++ b/promotions.html
@@ -119,7 +119,7 @@
             </li>
 
 
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left d-none">
               <div class="portfolio-list col-12 float-left">
                 <a href="insights-article-0.html">
                   <div class="col-12 p-0 portfolio-image-container">
@@ -133,7 +133,7 @@
 
 
 
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left d-none">
               <div class="portfolio-list col-12 float-left">
                 <a href="insights-article-1.html">
                   <div class="col-12 p-0 portfolio-image-container">
