--- a/promotion-development-referral.html
+++ b/promotion-development-referral.html
@@ -78,7 +78,7 @@
         </ul>
         </li>
 
-          <li class="nav-item-3" id="active"><a href="portfolio.html">PORTFOLIO</a></li>
+          <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
           <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
@@ -102,7 +102,7 @@
 
 
     <div class="col-12 col-lg-8 image-container">
-      <img src="assets/images/promotions/development-referral/foster-zero-5.png" class="col-12" alt="...">
+      <img src="assets/images/promotions/development-referral/temp.png" class="col-12" alt="...">
     </div>
 
 
@@ -293,11 +293,12 @@
           </select>
 
       </div>
-      <div class="col-12 col-6">
-        <button id="_form_1_submit" class="_submit col-12" type="submit">
-          Submit
+      <div class="col-10 offset-1">
+        <button id="_form_1_submit" class="link-outline col-12" type="submit">
+          Submit <img src="assets/arrow.svg" alt="#">
         </button>
       </div>
+      
       <div class="_clear-element">
       </div>
     </div>
