--- a/thank-you.html
+++ b/thank-you.html
@@ -113,10 +113,10 @@
 <div class="gallery-item-container col-12 col-md-6 col-xl-4">
   <div class="gallery-item col-12">
     <div class="gallery-image-container">
-    <img src="assets/images/portfolio/development/rice-energy.png" alt="#">
+    <img src="assets/images/portfolio/development/rice-energy.png" alt="Rice Energy lobby with abstract wood pattern architecture">
   </div>
       <h3>RICE ENERGY</h3>
-      <p>Property Name | Location</p>
+      <p>Zenith Ridge | Southpointe</p>
   </div>
 </div>
 
@@ -126,10 +126,10 @@
 <div class="gallery-item-container col-12 col-md-6 col-xl-4">
   <div class="gallery-item col-12">
     <div class="gallery-image-container">
-    <img src="assets/images/portfolio/development/ansys.png" alt="#">
+    <img src="assets/images/portfolio/development/ansys.png" alt="Ansys lobby/front desk">
   </div>
       <h3>ANSYS</h3>
-      <p>Property Name | Location</p>
+      <p>Zenith Ridge | Southpointe</p>
   </div>
 </div>
 
@@ -140,10 +140,10 @@
 <div class="gallery-item-container col-12 col-md-6 col-xl-4">
   <div class="gallery-item col-12">
     <div class="gallery-image-container">
-    <img src="assets/images/portfolio/development/riviera.png" alt="#">
+    <img src="assets/images/portfolio/development/connective-rx.png" alt="Connective RX lobby/waiting area">
   </div>
-      <h3>THE RIVIERA</h3>
-      <p>The Riviera | South Oakland, PA</p>
+      <h3>CONNECTIVE RX</h3>
+      <p>Boardwalk | North Fayette</p>
   </div>
 </div>
 
@@ -154,10 +154,10 @@
 <div class="gallery-item-container col-12 col-md-6 col-xl-4">
   <div class="gallery-item col-12">
     <div class="gallery-image-container">
-    <img src="assets/images/portfolio/development/alpha.png" alt="#">
+    <img src="assets/images/portfolio/development/alpha.png" alt="Alpha Capital lobby/front desk">
   </div>
       <h3>ALPHA CAPITAL</h3>
-      <p>Property Name | Location</p>
+      <p>Beacon I | South Fayette</p>
   </div>
 </div>
 
@@ -168,10 +168,10 @@
 <div class="gallery-item-container col-12 col-md-6 col-xl-4">
   <div class="gallery-item col-12">
     <div class="gallery-image-container">
-    <img src="assets/images/portfolio/development/arcadia.png" alt="#">
+    <img src="assets/images/portfolio/development/arcadia.png" alt="Arcadia collaborative office space with couches and a kitchen">
   </div>
       <h3>ARCADIA</h3>
-      <p>The Bentley | Greentree, PA</p>
+      <p>The Bentley | Greentree</p>
   </div>
 </div>
 
@@ -182,30 +182,17 @@
 <div class="gallery-item-container col-12 col-md-6 col-xl-4">
   <div class="gallery-item col-12">
     <div class="gallery-image-container">
-    <img src="assets/images/portfolio/development/riviera.png" alt="#">
+    <img src="assets/images/portfolio/development/bsb.png" alt="Bluesphere bio wetlab">
   </div>
       <h3>BLUESPHERE BIO</h3>
-      <p>The Riviera | South Oakland, PA</p>
+      <p>The Riviera | South Oakland</p>
   </div>
 </div>
 
 
 
 
-
-
-
-
-
-
-
-
 </div>
-
-
-
-
-
 
 
 
