--- a/buildout.html
+++ b/buildout.html
@@ -131,6 +131,7 @@
 
 <div class="form-container">
 
+
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
     <form method="POST" action="https://burnsscalorealestate.activehosted.com/proc.php" id="_form_1_" class="_form _form_1 _inline-form  _dark" novalidate>
       <input type="hidden" name="u" value="1" />
@@ -142,7 +143,6 @@
       <input type="hidden" name="v" value="2" />
       <div class="_form-content col-10 offset-1">
 
-
         <div class="col-12">
                   <h3 class="col-12">See How Much You Can Make</h3>
         <p class="col-12">
@@ -150,29 +150,27 @@
         </p>
         </div>
 
-
         <div class="col-12 col-md-6">
-            <input type="text" class="col-12 col-md-6" name="fullname" placeholder="Full Name*" required/>
+            <input type="text" class="col-12 col-md-6" name="fullname" placeholder="Full Name" required/>
           </div>
 
 
-        <div class="col-12 col-md-6">
-            <input type="text" class="col-12 col-md-6" name="email" placeholder="Email*" required/>
-        </div>
-
+          <div class="col-12 col-md-6">
+            <input type="text" class="col-12 col-md-6" name="email" placeholder="Email" required/>
+          </div>
 
 
           <div class="col-12">
-            <input type="text" class="col-12" name="field[1]" value="" placeholder="Organization" id="organization"/>
+            <input type="text" class="col-12" name="field[1]" value="" placeholder="Organization" />
           </div>
 
-        <div class="col-12 col-md-6" >
-          <label class="col-12">
+          <div class="col-12 col-md-6" >
+
+              <label class="col-12">
             Estimated Square Footage*
           </label>
 
-          <div class="col-12">
-
+              <div class="col-12">
             <select name="field[4]" required>
               <option selected>
               </option>
@@ -189,9 +187,7 @@
           </div>
         </div>
 
-
         <div class="col-12 col-md-6" >
-
           <label class="col-12 p-0">
             Referred By*
           </label>
@@ -218,15 +214,13 @@
           </div>
         </div>
 
-
         <div class="col-12">
-
           <button id="_form_1_submit" class="link-outline col-12" type="submit">
             Submit
           </button>
         </div>
-        <div class="_clear-element">
-        </div>
+
+
       </div>
       <div class="_form-thank-you" style="display:none;">
       </div>
@@ -555,7 +549,6 @@
   })();
 
   </script>
-
 
 
 
